# Graphing-Calculator

./: .gitignore  CMakeLists.txt  README.md  build-linux.sh  build-msys.sh
.github/workflows/: cmake-multi-platform.yml
src/: graph.cpp  graphWindow.cpp  graphing.hpp  main.cpp  numOutputs.cpp  numOutputs.hpp  ui.cpp  window.cpp
src/backend/: numOutputs.cpp
src/ui/: graphWindow.cpp  ui.cpp
